--- a/index.html
+++ b/index.html
@@ -198,9 +198,14 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+     <h3 class="l">Find the True Love of Your Dog's Life Today.</h3>
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <center><button type="button" class="btn btn-dark btn-lg download-button">
+        <i class="fab fa-apple"></i> Download
+      </button>
+      <button type="button" class="btn btn-lg btn-outline-light download-button">
+        <i class="fab fa-google-play"></i> Download
+      </button></center>
 
   </section>
 
@@ -208,9 +213,14 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    
+    <center>
+    <i class="ico abc fab fa-twitter fa-2x"></i>
+    <i class="ico def fab fa-instagram fa-2x"></i>
+    <i class="ico ghi fab fa-facebook fa-2x"></i>
+    <i class="ico jkl fas fa-envelope fa-2x"></i>
     <p>© Copyright 2018 TinDog</p>
-
+    </center>
   </footer>
 
 
