--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="new-link" href=" ">Contact</a>
+              <a class="new-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="new-link" href="">Pricing</a>
+              <a class="new-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="new-link" href="">Download</a>
+              <a class="new-link" href="#download">Download</a>
             </li>
           </ul>
         </div>
